# imgui-beef

./: .gitattributes  .gitignore  BeefProj.toml  README.md
.github/workflows/: build.yml
Generator/: BindingGenerator.cs
Generator/ImGui/: ImGui.cs  ImGuiConstructorDefinition.cs  ImGuiEnum.cs  ImGuiImplStruct.cs  ImGuiTypeDef.cs
ImGuiImplGlfw/: BeefProj.toml
ImGuiImplGlfw/src/: ImGuiImplGlfw.bf
ImGuiImplSDL/src/: ImGuiImplSDL.bf
ImGuiImplVulkan/: BeefProj.toml
ImGuiImplVulkan/src/: ImGuiImplVulkan.bf
Native/: CMakeLists.txt
Setup/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt
Setup/Generator/: BindingGenerator.cs  Program.cs
Setup/Generator/ImGui/: ImGuiGlobalMethodDefinition.cs  ImGuiImplStruct.cs  ImGuiMethodDefinition.cs  ImGuiMethodParameter.cs  ImGuiStruct.cs
Setup/src/: BuildHelper.bf  CMake.bf  Program.bf
src/: ImGui.Gen.bf  ImGui.bf
